--- a/calculadora.html
+++ b/calculadora.html
@@ -9,6 +9,15 @@
 
 
 			}
+			function suma(){
+
+				var num1 = document.getElementById('n2');
+				var num2 = document.getElementById('n3');
+				var suma=parseInt(num1.value) +parseInt(num2.value);
+				 alert("La suma es: "+suma);
+				
+			}
+			
 
 		</script>
 	</head>
@@ -16,6 +25,13 @@
 		Number:
 		<input type="text" id="n1">
 		<button onclick="square()">x<sup>2</sup></button>
+		
+		
+		Number1:
+		<input type="text" id="n2">
+		Number2:
+		<input type="text" id="n3">
+		<button onclick="suma()">suma</button>
 	
 	</body>
 	</html>	
